@@ -1,3 +1,7 @@
+2016-01-26  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/security-file.c: s/g_strcmp0/strcmp/
+	* man/xml-source/amanda.8.xml: Add amanda-security.conf
+
 2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/Makefile.am (EXTRA_DIST): Add make_security_file.c
 	* common-src/make_security_file.c: Typo
